--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -900,11 +900,12 @@
     <string name="cache_menu_preventWaypointsFromNote">Prevent waypoints from note</string>
     <string name="cache_menu_allowWaypointExtraction">Allow waypoints from note</string>
     <string name="cache_personal_note_edit">Edit</string>
-    <string name="cache_personal_note_storewaypoints">Store Waypoints</string>
+    <string name="cache_personal_note_storewaypoints">Add/Update Waypoints</string>
+    <string name="cache_personal_note_removewaypoints">Remove Waypoints</string>
     <string name="cache_personal_note_storewaypoints_success">Waypoints were added to personal note</string>
     <string name="cache_personal_note_storewaypoints_success_limited">Waypoints were added to note but had to be shortened (max personal note size: %1$d)</string>
     <string name="cache_personal_note_storewaypoints_failed">Waypoints could not be stored in note due to size limits (max personal note size: %1$d)</string>
-    <string name="cache_personal_note_storewaypoints_nowaypoints">No user waypoints found</string>
+    <string name="cache_personal_note_storewaypoints_nowaypoints">No storable waypoints found</string>
     <string name="cache_personal_note_preventWaypointsExtraction">Prevent waypoints extraction</string>
     <string name="cache_personal_note_limit">Personal note limit</string>
     <string name="cache_personal_note_truncation" tools:ignore="PluralsCandidate">This personal note will be truncated after %d characters by Geocaching.com.</string>
