--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -125,9 +125,11 @@
     <string name="log_yesterday">Yesterday</string>
     <string name="log_smilies">Smilies</string>
     <string name="log_image">Image</string>
+    <string name="log_images">Images</string>
     <string name="log_image_attach">Attach Image</string>
     <string name="log_image_stored">Existing</string>
     <string name="log_image_camera">New</string>
+    <string name="log_image_delete">Delete</string>
     <string name="log_image_caption">Caption</string>
     <string name="log_image_description">Description</string>
     <string name="log_image_scale">Scaling</string>
@@ -154,6 +156,10 @@
 
     <string name="log_image_scale_option_noscaling">No scaling</string>
     <string name="log_image_scale_option_entry">%1$d px</string>
+    <string name="log_image_info">%1$d x %2$d px, %3$d KB\n%4$s</string>
+    <string name="log_image_titleprefix">Image</string>
+    <string name="log_image_titleprefix_hint">Image Title Prefix</string>
+
 
     <!-- translation -->
     <string name="translate_to_sys_lang">Translate to %s</string>
