--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -689,6 +689,8 @@
     <string name="init_trackautovisit">Visit TBs</string>
     <string name="init_summary_trackautovisit">Set trackables to \"Visited\" by default</string>
     <string name="init_sigautoinsert">Insert automatically</string>
+    <string name="init_offlinelogs_homescreen">Show offline logs</string>
+    <string name="init_summary_offlinelogs_homescreen">A counter like \"+1\" will be displayed on home screen if you have logs that are not yet submitted</string>
     <string name="init_loaddirectionimg">Direction Image</string>
     <string name="init_summary_loaddirectionimg">Download directional arrow image if necessary (only required for Basic Members)</string>
     <string name="init_default_navigation_tool">Default Navigation</string>
