--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1257,7 +1257,7 @@
     <string name="search_tb">Trackable</string>
     <string name="search_tb_hint">Trackable identification</string>
     <string name="search_tb_button">Search for trackable</string>
-    <string name="search_destination">Destination</string>
+    <string name="search_destination">Open destination in c:geo</string>
     <string name="search_address_started">Searching for places</string>
     <string name="search_address_result">Found places</string>
     <string name="search_own_caches">Search my caches</string>
